API-02: Implement signature verification and JWT token issuance #23

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,13 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # ===========================================
 
 PORT=4000
+
+# ===========================================
+# JWT CONFIGURATION
+# ===========================================
+
+# Secret for signing access tokens (min 32 chars recommended)
+JWT_SECRET=your_jwt_secret_min_32_chars_here
+
+# Secret for signing refresh tokens — must differ from JWT_SECRET (min 32 chars recommended)
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_min_32_chars_here
